tests/algorithms/x/C/strings/anagrams.c
// Generated by Mochi 0.10.32 on 2025-08-24 09:06 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>

size_t split_len;
size_t insertion_sort_len;
size_t unique_sorted_len;
size_t anagram_len;

size_t append_len;
static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

typedef struct { const char **keys; void **vals; size_t *lens; size_t len; size_t cap; } MapSL;

typedef struct { const char **keys; int *vals; size_t len; size_t cap; } MapSI;

static int map_get_si(const char *keys[], const int vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static void map_set_si(MapSI *m, const char *key, int val) {
    for (size_t i = 0; i < m->len; i++) {
        if (strcmp(m->keys[i], key) == 0) { m->vals[i] = val; return; }
    }
    if (m->len >= m->cap) {
        m->cap = m->cap ? m->cap * 2 : 16;
        m->keys = realloc((void*)m->keys, m->cap * sizeof(char*));
        m->vals = realloc(m->vals, m->cap * sizeof(int));
    }
    m->keys[m->len] = key; m->vals[m->len] = val; m->len++;
}

static void* map_get_sl(const char *keys[], void *vals[], const size_t lens[], size_t len, const char *key, size_t *out_len) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) { if (out_len) *out_len = lens[i]; return vals[i]; }
    }
    if (out_len) *out_len = 0;
    return NULL;
}

static void map_set_sl(const char *keys[], void *vals[], size_t lens[], size_t *len, const char *key, void *val, size_t val_len) {
    for (size_t i = 0; i < *len; i++) {
        if (strcmp(keys[i], key) == 0) { vals[i] = val; lens[i] = val_len; return; }
    }
    keys[*len] = key; vals[*len] = val; lens[*len] = val_len; (*len)++;
}

static const char** list_append_str(const char **arr, size_t *len, const char *val) {
    arr = realloc((void*)arr, (*len + 1) * sizeof(char*));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

static const char* _substring(const char *s, int start, int end) {
    int len = (int)strlen(s);
    if (start < 0) start = 0;
    if (end > len) end = len;
    if (start > end) start = end;
    char *res = malloc(end - start + 1);
    memcpy(res, s + start, end - start);
    res[end - start] = 0;
    return res;
}

static const char* word_by_signature_keys[16] = {};
static void* word_by_signature_vals[16] = {};
static size_t word_by_signature_lens[16] = {};
size_t word_by_signature_len = 0;
MapSL word_by_signature = { word_by_signature_keys, word_by_signature_vals, word_by_signature_lens, 0, 16 };

const char* * split(const char* s, const char* sep);
const char* * insertion_sort(const char* * arr, size_t arr_len);
const char* sort_chars(const char* word);
const char* * unique_sorted(const char* * words, size_t words_len);
void build_map(const char* * words, size_t words_len);
const char* * anagram(const char* my_word);
void user_main();
int main(void);

const char* * split(const char* s, const char* sep) {
    const char* *res = NULL;
    size_t res_len = 0;
    const char* current = "";
    long long i = 0LL;
    while (i < strlen(s)) {
        const char* ch = _substring(s, i, i + 1LL);
        if (strcmp(ch, sep) == 0) {
            res = list_append_str(res, &res_len, current);
            current = "";
        } else {
            current = str_concat(current, ch);
        }
        i = i + 1LL;
    }
    res = list_append_str(res, &res_len, current);
    return split_len = res_len, res;
}

const char* * insertion_sort(const char* * arr, size_t arr_len) {
    const char* *a = arr;
    size_t a_len = arr_len;
    long long i = 1LL;
    while (i < a_len) {
        const char* key = a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
        long long j = i - 1LL;
        while ((j >= 0LL) && (strcmp(a[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})], key) > 0)) {
            a[(int)(j + 1LL)] = a[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})];
            j = j - 1LL;
        }
        a[(int)(j + 1LL)] = key;
        i = i + 1LL;
    }
    return insertion_sort_len = a_len, a;
}

const char* sort_chars(const char* word) {
    const char* *chars = NULL;
    size_t chars_len = 0;
    long long i = 0LL;
    while (i < strlen(word)) {
        chars = list_append_str(chars, &chars_len, _substring(word, i, i + 1LL));
        i = i + 1LL;
    }
    chars = insertion_sort(chars, chars_len);
    chars_len = insertion_sort_len;
    const char* res = "";
    i = 0LL;
    while (i < chars_len) {
        res = str_concat(res, chars[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? chars_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return res;
}

const char* * unique_sorted(const char* * words, size_t words_len) {
    static const char* seen_keys[16] = {};
    static int seen_vals[16] = {};
    size_t seen_len = 0;
    MapSI seen = { seen_keys, seen_vals, 0, 16 };
    const char* *res = NULL;
    size_t res_len = 0;
    for (size_t __i = 0; __i < words_len; __i++) {
        const char* w = words[__i];
        if ((strcmp(w, "") != 0) && not(contains_str(seen.keys, seen.len, w))) {
            res = list_append_str(res, &res_len, w);
            map_set_si(&seen, w, 1LL);
        }
    }
    res = insertion_sort(res, res_len);
    res_len = insertion_sort_len;
    return unique_sorted_len = res_len, res;
}

void build_map(const char* * words, size_t words_len) {
    for (size_t __i = 0; __i < words_len; __i++) {
        const char* w = words[__i];
        const char* sig = sort_chars(w);
        const char* *arr = NULL;
        size_t arr_len = 0;
        if (contains_str(word_by_signature.keys, word_by_signature.len, sig)) {
            arr = map_get_sl(word_by_signature.keys, word_by_signature.vals, word_by_signature.lens, word_by_signature.len, sig, &arr_len);
        }
        arr = list_append_str(arr, &arr_len, w);
        map_set_sl(word_by_signature.keys, word_by_signature.vals, word_by_signature.lens, &word_by_signature.len, sig, arr, arr_len);
    }
}

const char* * anagram(const char* my_word) {
    const char* sig = sort_chars(my_word);
    if (contains_str(word_by_signature.keys, word_by_signature.len, sig)) {
        return map_get_sl(word_by_signature.keys, word_by_signature.vals, word_by_signature.lens, word_by_signature.len, sig, NULL);
    }
    {
        const char** __tmp0_data = malloc(0 * sizeof(const char*));
        anagram_len = 0;
        return __tmp0_data;
    }
}

void user_main() {
    long long text = read_file("words.txt");
    const char* *lines = split(text, "\n");
    size_t lines_len = split_len;
    const char* *words = unique_sorted(lines, lines_len);
    size_t words_len = unique_sorted_len;
    build_map(words, words_len);
    for (size_t __i = 0; __i < words_len; __i++) {
        const char* w = words[__i];
        const char* *anas = anagram(w);
        size_t anas_len = anagram_len;
        if (anas_len > 1LL) {
            const char* line = str_concat(w, ":");
            long long i = 0LL;
            while (i < anas_len) {
                if (i > 0LL) {
                    line = str_concat(line, ",");
                }
                line = str_concat(line, anas[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? anas_len + _mochi_idx : _mochi_idx;})]);
                i = i + 1LL;
            }
            puts(line);
        }
    }
}

int main(void) {
    {
        long long __start = _now();
        user_main();
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
